[tool.poetry]
name = "repl-chrome"
version = "0.1.0"
description = ""
authors = ["Parker Wahle <regulad@regulad.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
replutil = "^0.1.1"
replit = "^3.2.4"
getkey = "^0.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
